# IBM_Machine_Learning_Certificate

./: .gitignore  README.md  pyproject.toml  requirements.txt
Deep_Learning_and_Reinforcement_Learning/final_assignment/: conditional_GAN.ipynb  conditional_GAN.pth  deep_learning_final_assignment.ipynb  model.py
Deep_Learning_and_Reinforcement_Learning/week1/: gradient_descent_demo.ipynb  intro_to_nn_lab.ipynb  nn_with_sklearn.ipynb
Deep_Learning_and_Reinforcement_Learning/week2/: Readme.txt  backpropagation_demo.ipynb  intro_to_keras_lab.ipynb  loading_images_in_keras.ipynb  regression_with_keras_lab.ipynb
Deep_Learning_and_Reinforcement_Learning/week3/: hyperparamter_optimization.ipynb  optimizers_lab.ipynb
Deep_Learning_and_Reinforcement_Learning/week4/: bulding_a_cnn.ipynb  categorical_cross_entropy.ipynb
Deep_Learning_and_Reinforcement_Learning/week5/: introduction_to_models_in_keras.ipynb  regularization.ipynb  transfer_learning.ipynb  transfer_learning_with_examples.ipynb
Deep_Learning_and_Reinforcement_Learning/week6/: lstm_gru_exercise.ipynb  pre_trained_RNNs.ipynb  rnn_exercise.ipynb  types_of_sequential_data.ipynb  word_embeddings.ipynb
Deep_Learning_and_Reinforcement_Learning/week7/: autoencoders.ipynb  autoencoders_lab.ipynb  variational_autoencoders.ipynb
Deep_Learning_and_Reinforcement_Learning/week8/: Deep_GANS_with_keras.ipynb  (+2 more)
Exploratory_Data_Analysis/: lab1.ipynb  lab2.ipynb
Exploratory_Data_Analysis_and_Feature_Engineering/: eda_final_assignment.ipynb
practice_workbooks/: gpu_test.ipynb  w4_build_controllable_gan.ipynb
(+111 files in other folders)
